--- a/CN_AV/header.html
+++ b/CN_AV/header.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>固定顶部导航栏</title>
+<!-- header.html -->
 <style>
-body, html {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
-
 /* 顶部导航栏 */
 .headerbar {
   position: fixed;
@@ -25,7 +14,8 @@ body, html {
   justify-content: center;
   padding: 0 20px;
   box-sizing: border-box;
-  z-index: 1000;
+  z-index: 9999;
+  font-family: Arial, sans-serif;
   box-shadow: 0 2px 5px rgba(0,0,0,0.3);
 }
 
@@ -36,39 +26,39 @@ body, html {
   color: #ffcc00;
   position: absolute;
   left: 20px;
-  cursor: pointer;
 }
 
-/* 导航菜单 */
+/* 菜单 */
 .headerbar nav {
   display: flex;
   gap: 20px;
+  align-items: center;
+  white-space: nowrap;
+  transition: max-height 0.3s ease;
 }
 
+/* 菜单链接 */
 .headerbar nav a {
   color: #fff;
   text-decoration: none;
   font-size: 14px;
   padding: 5px 0;
 }
-
 .headerbar nav a:hover {
   color: #ffcc00;
 }
 
-/* 汉堡按钮（小屏显示） */
+/* 汉堡按钮 */
 .hamburger {
   display: none;
-  position: absolute;
-  right: 20px;
-  width: 25px;
-  height: 20px;
   flex-direction: column;
   justify-content: space-between;
+  width: 25px;
+  height: 18px;
   cursor: pointer;
-  z-index: 1010;
+  position: absolute;
+  right: 20px;
 }
-
 .hamburger span {
   display: block;
   height: 3px;
@@ -76,41 +66,31 @@ body, html {
   border-radius: 2px;
 }
 
-/* 手机端样式 */
+/* 手机端折叠菜单 */
 @media (max-width: 768px) {
   .headerbar nav {
-    display: none;
-    position: fixed;
+    position: absolute;
     top: 60px;
-    right: 0;
-    width: 200px;
+    left: 0;
+    width: 100%;
     flex-direction: column;
     background-color: #1a1a1a;
-    box-shadow: -2px 2px 5px rgba(0,0,0,0.5);
-    padding: 10px 0;
+    overflow: hidden;
+    max-height: 0;
   }
-
   .headerbar nav.show {
-    display: flex;
+    max-height: 500px; /* 可根据菜单数量调整 */
   }
-
-  .headerbar nav a {
-    padding: 10px 20px;
-    border-bottom: 1px solid #333;
-  }
-
   .hamburger {
     display: flex;
   }
 }
 
-/* 页面内容占位 */
+/* 给 body 留出顶部空间 */
 body {
   padding-top: 60px;
 }
 </style>
-</head>
-<body>
 
 <div class="headerbar">
   <div class="logo">御女宫国产AV</div>
@@ -123,7 +103,7 @@ body {
     <a href="https://t.me/yunvgongCNAV" target="_blank">电报群</a>
   </nav>
 
-  <div class="hamburger" id="hamburgerBtn" aria-label="菜单">
+  <div class="hamburger" id="hamburgerBtn">
     <span></span>
     <span></span>
     <span></span>
@@ -131,27 +111,22 @@ body {
 </div>
 
 <script>
-// 确保DOM加载完成
-document.addEventListener("DOMContentLoaded", function() {
+(function(){
   const hamburger = document.getElementById("hamburgerBtn");
   const navMenu = document.getElementById("navMenu");
 
-  hamburger.addEventListener("click", function(e) {
+  hamburger.addEventListener("click", function(e){
     e.stopPropagation();
     navMenu.classList.toggle("show");
   });
 
-  // 点击页面其他地方收起菜单
-  document.addEventListener("click", function() {
+  // 点击页面其他地方关闭菜单
+  document.addEventListener("click", function(){
     navMenu.classList.remove("show");
   });
 
-  // 点击菜单本身不收起
-  navMenu.addEventListener("click", function(e) {
+  navMenu.addEventListener("click", function(e){
     e.stopPropagation();
   });
-});
+})();
 </script>
-
-</body>
-</html>
