--- a/CN_AV/header.html
+++ b/CN_AV/header.html
@@ -2,12 +2,10 @@
   <div class="logo">御女宫国产AV</div>
   <div class="hamburger" id="hamburger">&#9776;</div>
   <nav id="navMenu">
-    <a href="/movie/new" id="menu-new">最新更新</a>
-    <a href="/CN_AV/chinese_AV" id="menu-av">国产AV</a>
-    <a href="/CN_AV/actress" id="menu-actress">国产女优</a>
-    <a href="/CN_AV/company" id="menu-company">A片出品厂</a>
-    <a href="https://t.me/yunvgongCNAV" target="_blank" id="menu-telegram">电报群</a>
+    <a href="/movie/new">最新更新</a>
+    <a href="/CN_AV/chinese_AV">国产AV</a>
+    <a href="/CN_AV/actress">国产女优</a>
+    <a href="/CN_AV/company">A片出品厂</a>
+    <a href="https://t.me/yunvgongCNAV" target="_blank">电报群</a>
   </nav>
 </div>
-<link rel="stylesheet" href="header.css">
-<script src="header.js"></script>
