--- a/CN_AV/header.html
+++ b/CN_AV/header.html
@@ -1,6 +1,11 @@
+<!-- 顶部导航栏 -->
+<link rel="stylesheet" href="header.css">
+
 <div class="headerbar">
   <div class="logo">御女宫国产AV</div>
+
   <div class="hamburger" id="hamburger">&#9776;</div>
+
   <nav id="navMenu">
     <a href="/movie/new">最新更新</a>
     <a href="/CN_AV/chinese_AV">国产AV</a>
